@@ -28,6 +28,7 @@ library(DT)
                                       ".csv"),
                               multiple=FALSE),
                   tags$hr(),
+                  numericInput("RefWell", "Reference well", 1, min=1, max=96),
                   numericInput("BInput", "Number of permutations", 200),
                   numericInput("QInput", "Q (For determining outliers)", 9),
                   actionButton("goButton", "Set thresholds")
@@ -162,14 +163,14 @@ server <- function(input, output, session) {
         plateData <- mapply(function(x, i){
             wellData <- utils::read.csv(x, header=TRUE, sep=",",
                             col.names=c("Ch1", "Ch2", "cluster"))[seq_len(2)]
-            if(TRUE %in% is.nan(wellData[, 1]) | TRUE %in% is.na(wellData[, 1])
-                | TRUE %in% (wellData[, 1] < 0))
+            if(TRUE %in% is.nan(wellData[, 1]) | TRUE %in% is.na(wellData[, 1]))
+                #| TRUE %in% (wellData[, 1] < 0))
                 showNotification(paste0("Check channel 1 values in file: ", i),
                                  duration=NULL, type="warning")
-            if(TRUE %in% is.nan(wellData[, 2]) | TRUE %in% is.na(wellData[, 2])
-                | TRUE %in% (wellData[, 2] < 0))
-              showNotification(paste0("Check channel 2 values in file: ", i),
-                               duration=NULL, type="warning")
+            if(TRUE %in% is.nan(wellData[, 2]) | TRUE %in% is.na(wellData[, 2]))
+                #| TRUE %in% (wellData[, 2] < 0))
+                showNotification(paste0("Check channel 2 values in file: ", i),
+                                duration=NULL, type="warning")
             return(list(wellData))
         }, x=inFile$datapath, i=inFile$name)
 
@@ -238,7 +239,7 @@ server <- function(input, output, session) {
                                     nchannels=dim(plateList[[1]])[2],
                                     B=input$BInput,
                                     Q=input$QInput,
-                                    refWell=1,
+                                    refWell=input$RefWell,
                                     updateProgress=updateProgress),
                     q,
                     target_assay, ctrl_assay, editedCh1, editedCh2,
